fixed z indexing issues with scrolling on mobiles

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ main {
   font-size: x-large;
   position: fixed;
   width: 100%;
+  z-index: 1;
 }
 
 nav a {
@@ -196,6 +197,7 @@ footer {
   width: 100%;
   bottom: 0;
   padding: 0em;
+  z-index: 1;
 }
 
 #social-networks {
